--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^7.1.2",
+    "babel-preset-react-app": "^9.0.0",
     "elliptic": "^6.5.4",
     "immer": "^9.0.6",
     "object-path": "^0.11.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "^4.0.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "^5.0.1",
+    "react-test-renderer": "^18.2.0",
     "serialize-javascript": "^5.0.1",
     "ssri": "^8.0.1",
     "y18n": "^5.0.8",
@@ -37,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2"
   }
 }
